src/funcs1.h

// these functions do pass pointers
extern apf::FieldShape* getMeshShapePtr(apf::Mesh* m);
extern int count(apf::Mesh* m_local, int dimension);
void end(apf::Mesh* m, apf::MeshIterator* it);
extern int getType(apf::Mesh2* m_local, apf::MeshEntity* e);
extern int countNodesOn(apf::FieldShape* mshape_ptr, int type);
extern int countIntPoints(apf::MeshElement* e, int order);
extern void getIntPoint(apf::MeshElement* e, int order, int point, double coords[3]);
extern double getIntWeight(apf::MeshElement* e, int order, int point);
extern void getJacobian(apf::MeshElement* e, double coords[3], double jac[3][3]);
// Entityshape functions
extern int countNodes(apf::EntityShape* eshape_local);
extern void getValues(apf::Mesh* m, apf::EntityShape* eshape_local, double xi[3], double vals[]);
extern void getLocalGradients(apf::Mesh* m, apf::EntityShape* eshape_local, double xi[3], double vals[][3]);
void alignSharedNodes(apf::EntityShape* eshape_local, apf::Mesh* m_local, apf::MeshEntity* elem, apf::MeshEntity* shared, int order[]);
void getAllEntityCoords(apf::Mesh* m, apf::MeshEntity* e, double* coords);
// these function pass pointers
// create a generally defined numbering from julia
extern  apf::Numbering* createNumberingJ(apf::Mesh2* m_local, char* name, apf::FieldShape* field, int components);
extern void destroyNumbering(apf::Numbering* n);
apf::Numbering* findNumbering(apf::Mesh* m, const char* name);
extern void destroyNumberings(apf::Mesh* m, apf::Numbering* save_n[], int n_save);
apf::FieldShape* getNumberingShape(apf::Numbering* n);
int countNumberings(apf::Mesh* m);
apf::Numbering* getNumbering(apf::Mesh* m, int i);
extern int numberJ(apf::Numbering* n, apf::MeshEntity* e, int node, int component, int number);
extern  int getNumberJ(apf::Numbering* n, apf::MeshEntity* e, int node, int component);
extern bool isNumbered(apf::Numbering*n, apf::MeshEntity* e, int node, int component);
extern int getDofNumbers(apf::Numbering* n, apf::MeshEntity* entities[], uint8_t node_offsets[], uint8_t nodemap[], apf::MeshEntity* element, int dofnums[]);
void setNumberingOffset(apf::Numbering* num, int off);
void getElementNumbers(apf::Numbering* n, apf::MeshEntity*e, int num_nodes, int nums[]);
extern apf::Mesh* getNumberingMesh(apf::Numbering* n);
const char* getNumberingName(apf::Numbering* n);
extern void printNumberingName(apf::Numbering* n);
extern apf::MeshTag* createDoubleTag(apf::Mesh2 * m_local, char* name, int size);
extern void setDoubleTag(apf::Mesh2* m_local, apf::MeshEntity* e, apf::MeshTag* tag,  double data[]);
extern void getDoubleTag(apf::Mesh2* m_local, apf::MeshEntity* e, apf::MeshTag* tag,  double* data);